syntax = "proto3";

package blog;

option java_package = "com.example.protobuf.blog";
option java_multiple_files = true;

message Blog {
    int32 id = 1;
    string title = 2;
    string author = 3;
    string text = 4;
}

message GetBlogRequest {
    int32 id = 1;
}

message GetBlogResponse {
    Blog blog = 1;
}

message SaveBlogRequest {
    Blog blog = 1;
}

message SaveBlogResponse {
    int32 numberOfBlogs = 1;
}

message ListBlogsRequest {};

message GetAuthorWithMostBlogsResponse {
    string author = 1;
}

service BlogService {
    rpc GetBlog(GetBlogRequest) returns(GetBlogResponse) {};

    rpc SaveBlogs(stream SaveBlogRequest) returns(SaveBlogResponse) {};

    rpc ListBlogs(ListBlogsRequest) returns(stream GetBlogResponse) {};

    rpc GetAuthorWithMostBlogsOnSave(stream SaveBlogRequest) returns(stream GetAuthorWithMostBlogsResponse);
}
